--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-
+  <link href="../css/normalize.css" rel="stylesheet" />
+  <link href="../css/styles.css" rel="stylesheet" />
 
 
 </head>
@@ -57,7 +58,7 @@
     </div>
 </section>
 
-<section class="cid-r3WDhwNjk6 mbr-fullscreen mbr-parallax-background" id="header2-3">
+<section class="cid-r3WDjXfWOk mbr-fullscreen mbr-parallax-background" id="header2-2">
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
@@ -77,7 +78,7 @@
     </div>
 </section>
 
-<section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" data-bg-video="https://www.youtube.com/watch?v=uonk7Kil63o" id="header2-1">
+<section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" data-bg-video="https://www.youtube.com/watch?v=uonk7Kil63o" id="header2-3">
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
@@ -87,7 +88,7 @@
     </div>
 </section>
 
-<section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" data-bg-video="https://www.youtube.com/watch?v=uonk7Kil63o" id="header2-1">
+<section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" data-bg-video="https://www.youtube.com/watch?v=uonk7Kil63o" id="header2-4">
   <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);"></div>
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -98,7 +99,7 @@
     </div>
 </section>
 
-<section class="cid-r3WDjXfWOk mbr-fullscreen mbr-parallax-background" id="header2-4">
+<section class="cid-r3WDjXfWOk mbr-fullscreen mbr-parallax-background" id="header2-5">
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(35, 35, 35);"></div>
     <div class="container align-center">
         <div class="row justify-content-md-center">
