--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </section>
 
     <a-scene class="video-container" embedded>
-      <a-videosphere src="#video">
+      <a-videosphere src="#video" rotation="0 180 0">
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
