--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </nav>
 </section>
 
-    <a-scene class="video-container" embedded vr-mode-ui:enabled="false">
+    <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
       <a-videosphere src="#video" rotation="30 180 0">
       </a-videosphere>
       <a-assets>
