--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 </section>
 
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
+      <a-entity camera look-controls="reverseMouseDrag: true"></a-entity>
       <a-videosphere src="#video" rotation="30 180 0">
       </a-videosphere>
       <a-assets>
