--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
       <a-entity camera reverse-look-controls></a-entity>
-      <a-videosphere src="#video" rotation="30 180 0">
+      <a-videosphere src="#video">
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
