--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
-        <video id="video" muted autoplay loop playsinline>
-          <source src="assets/videos/Timelapse.webm" type="video/webm"/>
+        <video class="bv-video bv-video-wrap"id="video" muted autoplay loop playsinline>
         </video>
       </a-assets>
     </a-scene>
