--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
-        <video class="bv-video bv-video-wrap"id="video" muted autoplay loop playsinline>
+        <video class="bv-video"id="video" muted autoplay loop playsinline>
         </video>
       </a-assets>
     </a-scene>
