--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
-        <video class="bv-video"id="video" muted autoplay loop playsinline>
+        <video id="video" muted autoplay loop playsinline>
+          <source src="assets/videos/Timelapse.webm" type="video/webm"/>
         </video>
       </a-assets>
     </a-scene>
+    <div class="overlay-desc">
+      <center><img src="assets/images/veerlogo.png" alt="veer logo"></center>
+    </div>
   	   <video class="bv-video-2" muted autoplay loop></video>
     	   <video class="bv-video-3" muted autoplay loop></video>
 
