--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
         </div>
     </nav>
-</section>
+</section>s
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
       <a-entity camera reverse-look-controls></a-entity>
       <a-videosphere src="#video">
