--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true">
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href=""></a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href=""></a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href=""></a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="">Home</a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="">Vectus</a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="">Projects</a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="">The Team</a></li>
-              <li class="nav-item"><a class="nav-link link text-primary display-4" href="">About Us</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href=""></a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href=""></a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href=""></a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="">Home</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="">Vectus</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="">Projects</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="">The Team</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="">About Us</a></li>
             </ul>
         </div>
     </nav>
