--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
             </ul>
         </div>
     </nav>
-</section>s
+</section>
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
-<<<<<<< HEAD
       <a-entity camera reverse-look-controls></a-entity>
       <a-videosphere src="#video">
-=======
       <a-entity camera look-controls="reverseMouseDrag: true"></a-entity>
       <a-videosphere src="#video" rotation="30 180 0">
->>>>>>> parent of d2cf4ec... reverse
+
       </a-videosphere>
       <a-assets>
         <!-- Single source video. -->
@@ -65,9 +63,6 @@
     </a-scene>
   	   <video class="bv-video-2" muted autoplay loop></video>
     	   <video class="bv-video-3" muted autoplay loop></video>
-
-
-
 
 
 <section class="features16 cid-r3WImAkOiC" id="features16-7">
