--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <a-assets>
         <!-- Single source video. -->
         <video id="video" muted autoplay loop playsinline>
-          <source src="assets/videos/Timelapse.webm" type="video/webm"/>
+          <source src="assets/videos/Timelapse.webm" type="video/webm">
         </video>
-        <img id="logo" src="assets/veerlogo.png">
+        <img id="logo" src="assets/images/veerlogo.png">
       </a-assets>
     </a-scene>
 </body>
