--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </center>
     <div>
   </nav>
+  <div class="container-fluid">
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
       <a-entity camera reverse-look-controls></a-entity>
       <a-videosphere src="#video">
@@ -42,5 +43,6 @@
         <img id="logo" src="assets/images/veerlogo.png">
       </a-assets>
     </a-scene>
+  </div>
 </body>
 </html>
