videsphere closing tag

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img id="logo" src="assets/images/veerlogo.png">
       </a-assets>
       <a-entity camera reverse-look-controls></a-entity>
-      <a-videosphere src="#video">
+      <a-videosphere src="#video"></a-videosphere>
       <a-image src="#logo"></a-image>
 
     </a-scene>
