--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="">Contact Us</a></li>
       </ul>
     </center>
-    <div>
+  </div>
   </nav>
   <div class="container-fluid">
     <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
