--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/bootstrap-grid.css" rel="stylesheet" type="text/css">
   <link href="css/bootstrap-reboot.css" rel="stylesheet" type="text/css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
+  <link rel="icon" href="assets/images/veericon.ico" type="image/x-icon"/>
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   <!--<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>-->
 </head>
@@ -28,22 +29,5 @@
   </div>
   </nav>
     <img src="assets/images/veerlogo.png">
-  <!--<div class="video-container">
-    <video muted autoplay loop>
-      <source src="assets/videos/Timelapse.webm" type="video/webm">
-    </video>
-  </div>-->
-  <a-scene class="video-container" embedded vr-mode-ui="enabled: false">
-    <a-entity camera reverse-look-controls></a-entity>
-    <a-videosphere src="#video"></a-videosphere>
-    <a-entity camera look-controls="reverseMouseDrag: true"></a-entity>
-    <a-assets>
-      <!-- Single source video. -->
-      <video id="video" muted autoplay loop playsinline>
-        <source src="assets/videos/Timelapse.webm" type="video/webm"/>
-      </video>
-    </a-assets>
-  </a-scene>
-
 </body>
 </html>
